Fix Contact page link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,3 +19,12 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GTYJE767PZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GTYJE767PZ');
+</script>
